--- a/Views/Home/SalaI/NoDisponible.cshtml
+++ b/Views/Home/SalaI/NoDisponible.cshtml
@@ -1,6 +1,9 @@
 @{
-    ViewData["Title"] = "NoDisponible";
+    ViewData["Title"] = "No Disponible";
 }
+
+@await Html.PartialAsync("_TiempoRestante")
+
 <style>
     
 body {
