--- a/Views/Home/SalaII/Computadora.cshtml
+++ b/Views/Home/SalaII/Computadora.cshtml
@@ -168,7 +168,7 @@ body {
     </div>
 </div> 
 
-<audio id="musica" src="/Audio/RoomII.mp3" loop preload="auto"></audio>
+<audio id="musica" src="/Audio/RoomII.mp3" loop preload="auto" volume="1"></audio>
     <script>
         const audio = document.getElementById('musica');
         window.addEventListener('DOMContentLoaded', function() {
