--- a/Views/Home/SalaIII/NoDisponible3.cshtml
+++ b/Views/Home/SalaIII/NoDisponible3.cshtml
@@ -1,6 +1,9 @@
 @{
-    ViewData["Title"] = "NoDisponible3";
+    ViewData["Title"] = "No Disponible 3";
 }
+
+@await Html.PartialAsync("_TiempoRestante")
+
 <style>
     
 body {
