--- a/Views/Home/SalaI/Carta.cshtml
+++ b/Views/Home/SalaI/Carta.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Carta";
 }
 
+@await Html.PartialAsync("_TiempoRestante")
+
 <style>
     body {
         background-image: url('/Imagenes/Carta.png');
@@ -16,7 +18,7 @@
     }
 
     .titulo, .mensaje, .despedida {
-        font-size: 100%;
+        font-size: 200%;
         text-align: left;
         margin-left: 2%;
         margin-top: 2%;
@@ -25,10 +27,10 @@
     }
     #parrafoAnimado {
         color: rgb(0, 0, 0);
-        font-size: 100%;
+        font-size: 200%;
         font-family: "Courier New", Courier, monospace;
         font-weight: bold;
-        text-align: left;
+        text-align: center;
         margin-top: 2%;
         opacity: 0;
         transition: opacity 3s, color 3s;
@@ -41,7 +43,7 @@
 
 <h1 class="despedida">Su estimado amigo, VI</h1>
 
-<p id="parrafoAnimado">Agrandá esta pantalla y presione la tecla de espacio para avanzar</p>
+<p id="parrafoAnimado">Presione la tecla de espacio para avanzar</p>
 
 <script>
     const parrafo = document.getElementById('parrafoAnimado');
@@ -55,8 +57,6 @@
         parrafo.style.opacity = visible ? '0' : '1';
         visible = !visible;
     }, 750);
-
-    localStorage.removeItem('inicioContador');
 
     document.addEventListener('keydown', function(event) {
         if (event.code === 'Space') {
