--- a/Views/Home/SalaI/Cofre.cshtml
+++ b/Views/Home/SalaI/Cofre.cshtml
@@ -1,6 +1,9 @@
 @{
     ViewData["Title"] = "Cofre";
 }
+
+@await Html.PartialAsync("_TiempoRestante")
+
 <style>
     body {
         background-image: url('/Imagenes/Cofre.png');
@@ -26,24 +29,25 @@
     }
 
     .carta a {
-        left: 51vw;   
-        top: 24vh;    
-        width: 27vw;  
-        height: 29vh; 
+        left: 51.3vw;   
+        top: 15vh;    
+        width: 26vw;  
+        height: 36.5vh; 
+        rotate: 8deg;
     }
 
     .vela a {
-        left: 41vw;   
-        top: 50vh;    
-        width: 7vw;   
-        height: 14vh;  
+        left: 41.5vw;   
+        top: 51.5vh;    
+        width: 6vw;   
+        height: 16vh;  
     }
 
     .libro a {
-        left: 14vw;    
-        top: 22vh;    
-        width: 28vw;   
-        height: 18vh; 
+        left: 18vw;    
+        top: 10vh;    
+        width: 22vw;   
+        height: 28vh; 
     }
 
     .mensaje {
