--- a/Views/Home/SalaI/NoDisponibleCofre.cshtml
+++ b/Views/Home/SalaI/NoDisponibleCofre.cshtml
@@ -1,6 +1,9 @@
 @{
-    ViewData["Title"] = "NoDisponibleCofre";
+    ViewData["Title"] = "No Disponible Cofre";
 }
+
+@await Html.PartialAsync("_TiempoRestante")
+
 <style>
     
 body {
@@ -23,7 +26,7 @@ body {
 
 #titulo-cuarto {
     color: white;
-    font-size: 300%;
+    font-size: 700%;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-bottom: 15%;
